--- a/antora/components/refguide-index/modules/applib/pages/index/services/acceptheader/hooks/AcceptHeaderService_020-examples-and-usage.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/acceptheader/hooks/AcceptHeaderService_020-examples-and-usage.adoc
@@ -10,7 +10,7 @@ The `AcceptHeaderService` allows the responsibility for content negotiation (det
 
 The diagram below illustrated this:
 
-image::reference-services-api/acceptheaderservice.png[width="700px"]
+image::refguide:applib-svc:reference-services-api/acceptheaderservice.png[width="700px"]
 
 The REST request is submitted to a domain service with a xref:refguide:applib:index/annotation/DomainService.adoc#nature[nature] of `VIEW_REST_ONLY` (`MyRestApi` in the diagram).
 This uses the `AcceptHeaderService` to obtain the values of the HTTP `Accept` header.
