--- a/antora/components/refguide/modules/applib-classes/pages/spec.adoc
+++ b/antora/components/refguide/modules/applib-classes/pages/spec.adoc
@@ -47,7 +47,7 @@ public class Customer {
 == `Specification2`
 
 The `Specification2` interface extends the `Specification` API to add support for i18n.
-This is done by defining an additional method that returns a xref:applib-classes:about.adoc#TranslatableString[translatable string]:
+This is done by defining an additional method that returns a xref:refguide:applib:index/services/i18n/TranslatableString.adoc[translatable string]:
 
 [source,java]
 ----
