--- a/examples/demo/domain/src/main/java/demoapp/dom/types/isisext/asciidocs/samples/IsisAsciiDocSamples-sample1.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/types/isisext/asciidocs/samples/IsisAsciiDocSamples-sample1.adoc
@@ -5,8 +5,8 @@ Big ol' comment
 sittin' right 'tween this here title 'n header metadata
 ////
 
-:description: A demo of Asciidoctor. This document +
-exercises numerous features of AsciiDoc +
+:description: A demo of Asciidoctor. This document \
+exercises numerous features of AsciiDoc \
 to test Asciidoctor compliance.
 :library: Asciidoctor
 :idprefix:
