--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/hooks/CollectionLayout_026-named.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/hooks/CollectionLayout_026-named.adoc
@@ -11,8 +11,7 @@ We recommend that you only use this element when the desired name cannot be used
 Examples of that include a name that would be a reserved Java keyword (eg "package"), or a name that has punctuation, eg apostrophes.
 ====
 
-By default the name is HTML escaped.
-To allow HTML markup, set the related xref:refguide:applib:index/annotation/CollectionLayout.adoc#namedEscaped[namedEscaped()] element to `false`.
+The name is HTML escaped.
 
 For example:
 
@@ -23,7 +22,7 @@ import lombok.Setter;
 
 public class ToDoItem {
     @CollectionLayout(
-        named="Todo items that are <i>dependencies</i> of this item",
+        named="Dependencies of this item",
         namedEscaped=false
     )
     @Getter @Setter
