--- a/antora/components/refguide-index/modules/applib/pages/index/services/wrapper/hooks/WrapperFactory_020-examples-and-usage.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/wrapper/hooks/WrapperFactory_020-examples-and-usage.adoc
@@ -57,7 +57,7 @@ In addition, the following methods may also be called:
 
 An exception will be thrown if any other methods are thrown.
 
-If the interface is performed (action invoked or property set), then - irrespective of whether the business rules were checked or skipped - a xref:refguide:applib:index/annotation/Action.adoc#command[command] will be created and pre- and post-execute xref:refguide:applib:index/annotation/Action.adoc#domainEvent[domain event]s) will be fired.
+If the interface is performed (action invoked or property set), then - irrespective of whether the business rules were checked or skipped - a xref:refguide:applib:index/annotation/Action.adoc#command-processing[command] will be created and pre- and post-execute xref:refguide:applib:index/annotation/Action.adoc#domainEvent[domain event]s) will be fired.
 
 === Mixins
 
