--- a/antora/components/refguide-index/modules/applib/pages/index/value/semantics/Parser.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/value/semantics/Parser.adoc
@@ -33,12 +33,12 @@ interface Parser<T> {
 }
 ----
 
-<.> xref:#parseableTextRepresentation__ValueSemanticsProvider.Context_T[parseableTextRepresentation(ValueSemanticsProvider.Context, T)]
+<.> xref:#parseableTextRepresentation__ValueSemanticsProviderContext_T[parseableTextRepresentation(ValueSemanticsProvider.Context, T)]
 +
 --
 A title for the object that is valid but which may be easier to edit than the title provided by a `TitleFacet` . (bijective)
 --
-<.> xref:#parseTextRepresentation__ValueSemanticsProvider.Context_String[parseTextRepresentation(ValueSemanticsProvider.Context, String)]
+<.> xref:#parseTextRepresentation__ValueSemanticsProviderContext_String[parseTextRepresentation(ValueSemanticsProvider.Context, String)]
 +
 --
 Parses a string to an instance of the object. (bijective)
@@ -56,14 +56,14 @@ The max length of objects that can be parsed (if any). A return type of -1 corre
 
 == Members
 
-[#parseableTextRepresentation__ValueSemanticsProvider.Context_T]
+[#parseableTextRepresentation__ValueSemanticsProviderContext_T]
 === parseableTextRepresentation(ValueSemanticsProvider.Context, T)
 
 A title for the object that is valid but which may be easier to edit than the title provided by a `TitleFacet` . (bijective)
 
 The idea here is that the viewer can display a parseable title for an existing object when, for example, the user initially clicks in the field. So, a date might be rendered via a `TitleFacet` as `May 2, 2007` , but its editable form might be `20070502` .
 
-[#parseTextRepresentation__ValueSemanticsProvider.Context_String]
+[#parseTextRepresentation__ValueSemanticsProviderContext_String]
 === parseTextRepresentation(ValueSemanticsProvider.Context, String)
 
 Parses a string to an instance of the object. (bijective)
