--- a/antora/components/refguide/modules/applib-ant/pages/about/jdo.adoc
+++ b/antora/components/refguide/modules/applib-ant/pages/about/jdo.adoc
@@ -35,7 +35,7 @@ Note that the discriminator overrides the object type that may otherwise be infe
 
 |xref:refguide:applib-ant:NotPersistent.adoc[@javax.jdo.annotations. +
 NotPersistent]
-|Used to determine whether to enforce or skip some xref:userguide:btb:about.adoc#custom-validator[metamodel validation] for `@Column` versus equivalent Isis annotations.
+|Used to determine whether to enforce or skip some metamodel validation for `@Column` versus equivalent Isis annotations.
 
 |Domain / persistence
 |Property
