--- a/antora/components/userguide/modules/fun/pages/domain-entities-and-services/crud.adoc
+++ b/antora/components/userguide/modules/fun/pages/domain-entities-and-services/crud.adoc
@@ -118,12 +118,12 @@ When an object is persisted the framework will emit `ObjectPersistingEvent` and 
 If using xref:pjdo:ROOT:about.adoc[JDO/DataNucleus], it is possible to configure ORM to automatically persist domain entities if they are associated with other already-persistent entities.
 This avoid the need to explicitly call "persist".
 
-This is done using xref:refguide:config:sections/jdo-datanucleus-conf.adoc#datanucleus.persistenceByReachabilityAtCommit[persistence-by-reachability] configuration property:
+This is done using xref:refguide:config:sections/datanucleus.adoc#datanucleus.persistence-by-reachability-at-commit[persistence-by-reachability] configuration property:
 
 [source,ini]
 .application.properties
 ----
-datanucleus.persistenceByReachabilityAtCommit=true
+datanucleus.persistence-by-reachability-at-commit=true
 ----
 
 One downside is that the code is arguably less easy to debug, and there may be performance implications.
