--- a/antora/components/userguide/modules/fun/pages/ui.adoc
+++ b/antora/components/userguide/modules/fun/pages/ui.adoc
@@ -12,8 +12,7 @@ The Apache Isis programming model includes several mechanisms to influence the w
 
 * the layout of application menu items (inferred from xref:domain-entities-and-services.adoc#domain-services[domain services])
 
-* the layout of domain objects (xref:domain-entities-and-services.adoc#domain-entities[domain entities] and xref:view-modules.adoc[view models]
-) allow the positioning of the xref:object-members.adoc[object members] into columns and tabs
+* the layout of domain objects (xref:domain-entities-and-services.adoc#domain-entities[domain entities] and xref:view-models.adoc[view models]) allow the positioning of the xref:object-members.adoc[object members] into columns and tabs
 
 * UI hints provided by the domain object itself returning:
 
