--- a/api/schema/src/main/adoc/modules/schema/pages/mml.adoc
+++ b/api/schema/src/main/adoc/modules/schema/pages/mml.adoc
@@ -19,14 +19,14 @@ The `metamodelDto` root element is defined as:
 
 [source,xml]
 ----
-<xs:schema targetNamespace="http://isis.apache.org/schema/metamodel"        <!--1-->
+<xs:schema targetNamespace="http://isis.apache.org/schema/metamodel"        <!--.-->
            elementFormDefault="qualified"
            xmlns="http://isis.apache.org/schema/metamodel"
            xmlns:xs="http://www.w3.org/2001/XMLSchema">
 
-    <xs:element name="metamodelDto">                                        <!--2-->
+    <xs:element name="metamodelDto">                                        <!--.-->
         <xs:complexType>
-            <xs:sequence minOccurs="1" maxOccurs="unbounded">               <!--3-->
+            <xs:sequence minOccurs="1" maxOccurs="unbounded">               <!--.-->
                 <xs:element ref="domainClassDto"/>
             </xs:sequence>
         </xs:complexType>
@@ -35,11 +35,11 @@ The `metamodelDto` root element is defined as:
     ...
 </xs:schema>
 ----
-<1> the metamodel schema has a namespace URI of "http://isis.apache.org/schema/mml".
+<.> the metamodel schema has a namespace URI of "http://isis.apache.org/schema/mml".
 Although URIs are not the same as URLs, you will find that the schemas are also downloadable from this location.
-<2> definition of the `metamodelDto` root element.
+<.> definition of the `metamodelDto` root element.
 The corresponding XML will use this as its top-level element.
-<3> consists of a list of `domainClassDto`, defined below.
+<.> consists of a list of `domainClassDto`, defined below.
 
 
 
@@ -51,16 +51,16 @@ The `domainClassDto` element describes the behaviour and structure of a single d
 ----
 <xs:schema targetNamespace="http://isis.apache.org/schema/mml" ... >
     ...
-    <xs:element name="domainClassDto">                                          <!--1-->
+    <xs:element name="domainClassDto">                                          <!--.-->
         <xs:complexType>
             <xs:complexContent>
-                <xs:extension base="facetHolder">                               <!--2-->
+                <xs:extension base="facetHolder">                               <!--.-->
                     <xs:sequence>
-                        <xs:element name="majorVersion" type="xs:string"        <!--3-->
-                                    minOccurs="0" maxOccurs="1" default="1"/>
+                        <xs:element name="majorVersion" type="xs:string"        <!--.-->
+                                    minOccurs="0" maxOccurs="1" default="2"/>
                         <xs:element name="minorVersion" type="xs:string"
                                     minOccurs="0" maxOccurs="1" default="0"/>
-                        <xs:element name="properties" minOccurs="0">            <!--4-->
+                        <xs:element name="properties" minOccurs="0">            <!--.-->
                             <xs:complexType>
                                 <xs:sequence>
                                     <xs:element name="prop" type="property"
@@ -68,7 +68,7 @@ The `domainClassDto` element describes the behaviour and structure of a single d
                                 </xs:sequence>
                             </xs:complexType>
                         </xs:element>
-                        <xs:element name="collections" minOccurs="0">           <!--5-->
+                        <xs:element name="collections" minOccurs="0">           <!--.-->
                             <xs:complexType>
                                 <xs:sequence>
                                     <xs:element name="coll" type="collection"
@@ -76,7 +76,7 @@ The `domainClassDto` element describes the behaviour and structure of a single d
                                 </xs:sequence>
                             </xs:complexType>
                         </xs:element>
-                        <xs:element name="actions" minOccurs="0">               <!--6-->
+                        <xs:element name="actions" minOccurs="0">               <!--.-->
                             <xs:complexType>
                                 <xs:sequence>
                                     <xs:element name="act" type="action"
@@ -85,8 +85,8 @@ The `domainClassDto` element describes the behaviour and structure of a single d
                             </xs:complexType>
                         </xs:element>
                     </xs:sequence>
-                    <xs:attribute name="id" type="xs:ID"/>                      <!--7-->
-                    <xs:attribute name="service" type="xs:boolean"/>            <!--8-->
+                    <xs:attribute name="id" type="xs:ID"/>                      <!--.-->
+                    <xs:attribute name="service" type="xs:boolean"/>            <!--.-->
                 </xs:extension>
             </xs:complexContent>
         </xs:complexType>
@@ -94,29 +94,24 @@ The `domainClassDto` element describes the behaviour and structure of a single d
     ...
 </xs:schema>
 ----
-<1> `domainClassDto` is defined as an element so that if necessary each domain class can be serialized to XML independently (rather than only within an outer `metamodelDto`.
-
-<2> extends from `facetHolder` type, defined below.
+<.> `domainClassDto` is defined as an element so that if necessary each domain class can be serialized to XML independently (rather than only within an outer `metamodelDto`.
+<.> extends from `facetHolder` type, defined below.
 +
 This allows a map of facets to be associated with the domain class.
-
-<3> each instance of this schema indicates the version of the schema it is compatible with (following semantic versioning)
-
-<4> the collection of properties (if any) of this domain class.
+<.> each instance of this schema indicates the version of the schema it is compatible with (following semantic versioning)
+<.> the collection of properties (if any) of this domain class.
 +
 This will include any mixin properties.
-<5> the collection of collections (if any) of this domain class.
+<.> the collection of collections (if any) of this domain class.
 +
 This will include any mixin collections.
-<6> the collection of actions (if any) of this domain class.
+<.> the collection of actions (if any) of this domain class.
 +
 This will include any mixin actions.
-
-<7> The fully qualified class name of the underlying Java class.
+<.> The fully qualified class name of the underlying Java class.
 +
 This is declared as 'xs:ID' so can be referenced elsewhere (using 'xs:IDREF').
-
-<8> Whether this is domain type is a domain service
+<.> Whether this is domain type is a domain service
 
 
 == `member`
@@ -129,16 +124,16 @@ The `member` (abstract) complex type is the supertype for properties, collection
     ...
     <xs:complexType name="member">
         <xs:complexContent>
-            <xs:extension base="facetHolder">                           <!--1-->
-                <xs:attribute name="id" type="xs:string"/>              <!--2-->
+            <xs:extension base="facetHolder">                           <!--.-->
+                <xs:attribute name="id" type="xs:string"/>              <!--.-->
             </xs:extension>
         </xs:complexContent>
     </xs:complexType>
     ...
 </xs:schema>
 ----
-<1> Inherits from `facetHolder`, allowing a set of facets to be associated with the member.
-<2> The id of the member, which should be unique within the domain class.
+<.> Inherits from `facetHolder`, allowing a set of facets to be associated with the member.
+<.> The id of the member, which should be unique within the domain class.
 +
 [NOTE]
 ====
@@ -156,9 +151,9 @@ The `property` complex type represent a scalar association returning a single va
     ...
     <xs:complexType name="property">
         <xs:complexContent>
-            <xs:extension base="member">                        <!--1-->
+            <xs:extension base="member">                        <!--.-->
                 <xs:sequence>
-                    <xs:element name="type" type="xs:IDREF"/>   <!--2-->
+                    <xs:element name="type" type="xs:IDREF"/>   <!--.-->
                 </xs:sequence>
             </xs:extension>
         </xs:complexContent>
@@ -166,9 +161,9 @@ The `property` complex type represent a scalar association returning a single va
     ...
 </xs:schema>
 ----
-<1> Extends from `member` complex type, defined above.
+<.> Extends from `member` complex type, defined above.
 Every property therefore has an id (unique within the domain class), and a set of facets.
-<2> A (reference to ) the type of this property, eg a String or a Customer.
+<.> A (reference to ) the type of this property, eg a String or a Customer.
 +
 This will be the value of the `id` of some other `domainClassDto`.
 
@@ -183,9 +178,9 @@ Like `property` (above), the `collection` complex types represent an association
     ...
     <xs:complexType name="collection">
         <xs:complexContent>
-            <xs:extension base="member">                            <!--1-->
+            <xs:extension base="member">                            <!--.-->
                 <xs:sequence>
-                    <xs:element name="type" type="xs:IDREF"/>       <!--2-->
+                    <xs:element name="type" type="xs:IDREF"/>       <!--.-->
                 </xs:sequence>
             </xs:extension>
         </xs:complexContent>
@@ -193,9 +188,9 @@ Like `property` (above), the `collection` complex types represent an association
     ...
 </xs:schema>
 ----
-<1> Extends from `member` complex type, defined above.
+<.> Extends from `member` complex type, defined above.
 Every collection therefore has an id (unique within the domain class), and a set of facets.
-<2> A (reference to ) the _element_ type of this collection, eg a Customer.
+<.> A (reference to ) the _element_ type of this collection, eg a Customer.
 +
 This will be the value of the `id` of some other `domainClassDto`.
 
@@ -210,13 +205,13 @@ The `action` complex type represents a behaviour of the domain object.
     ...
     <xs:complexType name="action">
         <xs:complexContent>
-            <xs:extension base="member">                                                <!--1-->
+            <xs:extension base="member">                                                <!--.-->
                 <xs:sequence>
-                    <xs:element name="returnType" type="xs:IDREF"/>                     <!--2-->
+                    <xs:element name="returnType" type="xs:IDREF"/>                     <!--.-->
                     <xs:element name="params">
                         <xs:complexType>
                             <xs:sequence>
-                                <xs:element name="param" type="param"                   <!--3-->
+                                <xs:element name="param" type="param"                   <!--.-->
                                             minOccurs="0" maxOccurs="unbounded"/>
                             </xs:sequence>
                         </xs:complexType>
@@ -230,10 +225,10 @@ The `action` complex type represents a behaviour of the domain object.
     ...
 </xs:schema>
 ----
-<1> Extends from `member` complex type, defined above.
+<.> Extends from `member` complex type, defined above.
 Every action therefore has an id (unique within the domain class), and a set of facets.
-<2> (A reference to) the return type of this action, eg a String or a Customer.
-<3> Each action has a collection of parameters (possibly none).
+<.> (A reference to) the return type of this action, eg a String or a Customer.
+<.> Each action has a collection of parameters (possibly none).
 
 
 == Action parameters
@@ -246,18 +241,18 @@ The concrete implementations are either `scalarParam` or `vectorParam`.
 ----
 <xs:schema targetNamespace="http://isis.apache.org/schema/mml" ... >
     ...
-    <xs:complexType name="param">                                   <!--1-->
+    <xs:complexType name="param">                                   <!--.-->
         <xs:complexContent>
-            <xs:extension base="facetHolder">                       <!--2-->
+            <xs:extension base="facetHolder">                       <!--.-->
                 <xs:sequence>
-                    <xs:element name="type" type="xs:IDREF"/>       <!--3-->
+                    <xs:element name="type" type="xs:IDREF"/>       <!--.-->
                 </xs:sequence>
-                <xs:attribute name="id" type="xs:string"/>          <!--4-->
+                <xs:attribute name="id" type="xs:string"/>          <!--.-->
             </xs:extension>
         </xs:complexContent>
     </xs:complexType>
 
-    <xs:complexType name="scalarParam">                             <!--5-->
+    <xs:complexType name="scalarParam">                             <!--.-->
         <xs:complexContent>
             <xs:extension base="param">
                 <xs:sequence>
@@ -266,7 +261,7 @@ The concrete implementations are either `scalarParam` or `vectorParam`.
         </xs:complexContent>
     </xs:complexType>
 
-    <xs:complexType name="vectorParam">                             <!--6-->
+    <xs:complexType name="vectorParam">                             <!--.-->
         <xs:complexContent>
             <xs:extension base="param">
                 <xs:sequence>
@@ -299,9 +294,9 @@ The meaning of the attributes depends on the facet implementation.
 ----
 <xs:schema targetNamespace="http://isis.apache.org/schema/mml" ... >
     ...
-    <xs:complexType name="facetHolder">                         <!--1-->
+    <xs:complexType name="facetHolder">                         <!--.-->
         <xs:sequence>
-            <xs:element name="facets" minOccurs="0">            <!--2-->
+            <xs:element name="facets" minOccurs="0">            <!--.-->
                 <xs:complexType>
                     <xs:sequence>
                         <xs:element name="facet" type="facet"
@@ -312,42 +307,35 @@ The meaning of the attributes depends on the facet implementation.
         </xs:sequence>
     </xs:complexType>
 
-    <xs:complexType name="facet">                               <!--3-->
+    <xs:complexType name="facet">                               <!--.-->
         <xs:sequence>
-            <xs:element name="attr" type="facetAttr"            <!--4-->
+            <xs:element name="attr" type="facetAttr"            <!--.-->
                         minOccurs="0" maxOccurs="unbounded"/>
         </xs:sequence>
-        <xs:attribute name="id" type="xs:string"/>              <!--5-->
-        <xs:attribute name="fqcn" type="xs:string"/>            <!--6-->
+        <xs:attribute name="id" type="xs:string"/>              <!--.-->
+        <xs:attribute name="fqcn" type="xs:string"/>            <!--.-->
     </xs:complexType>
 
-    <xs:complexType name="facetAttr">                           <!--7-->
+    <xs:complexType name="facetAttr">                           <!--.-->
         <xs:simpleContent>
             <xs:extension base="xs:string">
-                <xs:attribute name="name" type="xs:string"/>    <!--8-->
+                <xs:attribute name="name" type="xs:string"/>    <!--.-->
             </xs:extension>
         </xs:simpleContent>
     </xs:complexType>
     ...
 </xs:schema>
 ----
-<1> defines the `facetHolder` (abstract) complex type
-
-<2> \... which contains a set of ``facet``s
-
-<3> defines the `facet` complex type
-
-<4> \... which contains a set of ``facetAttr``s.
+<.> defines the `facetHolder` (abstract) complex type
+<.> \... which contains a set of ``facet``s
+<.> defines the `facet` complex type
+<.> \... which contains a set of ``facetAttr``s.
 +
 The meaning of the attributes depends on the implementation of the facet.
-
-<5> the identifier of the _type_ of the facet, well-known by the framework as representing a certain semantic (eg icon name or name of an action parameter)
-
-<6> the fully qualified class name of the implementation of the facet
-
-<7> defines the `facetAttr` complex type
-
-<8> the name of the attribute, unique across all facet attributes of a facet.
+<.> the identifier of the _type_ of the facet, well-known by the framework as representing a certain semantic (eg icon name or name of an action parameter)
+<.> the fully qualified class name of the implementation of the facet
+<.> defines the `facetAttr` complex type
+<.> the name of the attribute, unique across all facet attributes of a facet.
 +
 Note this complexType extends from `xs:string,` which defines the attribute's corresponding value.
 
