--- a/incubator/clients/kroviz/adoc/modules/kroviz/pages/credits.adoc
+++ b/incubator/clients/kroviz/adoc/modules/kroviz/pages/credits.adoc
@@ -37,13 +37,13 @@ In the icon: green, orange, red, blue
 == Components Colors
 
 * "JS Runtime" #f7df1e
-* KotlinJS link:./https%3A%2F%2Fgithub.com%2FJetBrains%2Fkotlin%2Ftree%2Fmaster%2Fjs.html[https://github.com/JetBrains/kotlin/tree/master/js] #8167FF-02AEFF {
+* KotlinJS link:https://github.com/JetBrains/kotlin/tree/master/js[https://github.com/JetBrains/kotlin/tree/master/js] #8167FF-02AEFF {
 * kotlinx.serialization as KS #DDE1F9/A9B4EF
-* kvision link:./https%3A%2F%2Frjaros.github.io%2Fkvision.html[https://rjaros.github.io/kvision] #00AAD4/216778
-* Bootstrap link:./https%3A%2F%2Fgetbootstrap.com%2F.html[https://getbootstrap.com/] #8F5ADC-31135B
-* "Font\nAwesome" link:./https%3A%2F%2Ffontawesome.com%2F.html[https://fontawesome.com/] #155592-1C7ED6
-* Tabulator link:./http%3A%2F%2Ftabulator.info%2F.html[http://tabulator.info/] #21441F|3DB549
-* Chart.js link:./https%3A%2F%2Fwww.chartjs.org%2F.html[https://www.chartjs.org/] #f27173
+* kvision link:https://rjaros.github.io/kvision[https://rjaros.github.io/kvision] #00AAD4/216778
+* Bootstrap link:https://getbootstrap.com/[https://getbootstrap.com/] #8F5ADC-31135B
+* "Font\nAwesome" link:https://fontawesome.com/[https://fontawesome.com/] #155592-1C7ED6
+* Tabulator link:http://tabulator.info/[http://tabulator.info/] #21441F|3DB549
+* Chart.js link:https://www.chartjs.org/[https://www.chartjs.org/] #f27173
 * kroViz #8064A2-F79646
 
 == Convert PNG to SVG
