--- a/viewers/restfulobjects/adoc/modules/ROOT/partials/security/webmodule.adoc
+++ b/viewers/restfulobjects/adoc/modules/ROOT/partials/security/webmodule.adoc
@@ -11,7 +11,7 @@ The SPI is:
 
 * xref:refguide:viewer:index/restfulobjects/viewer/webmodule/auth/AuthenticationStrategy.adoc[AuthenticationStrategy]
 
-where xref:refguide:core:index/security/authentication/Authentication.adoc[Authentication] represents a signed-on user.
+where the returned xref:refguide:applib:index/services/iactnlayer/InteractionContext.adoc[InteractionContext] represents a signed-on user.
 
 
 The strategy is defined using this configuration property:
